k8s/core/indexer/ingress/tx-indexer-ingress.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: tx-indexer-ingress
  namespace: gno
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`indexer.gnoland.tech`)
    kind: Rule
    services:
    - name: tx-indexer
      namespace: gno
      port: tx-indexer-port
